# physical-ai-book

./: .gitignore  404.html  CLAUDE.md  README.md  exists.txt  index.html  package-lock.json  package.json  sitemap.xml
.claude/: settings.local.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.specify/memory/: constitution.md
assets/css/: styles.1df985a8.css  styles.8c61231b.css  styles.fd3b2a76.css
assets/js/: 1572aebd.48345bc0.js  1572aebd.4e34a08d.js  1572aebd.fbeb859e.js  172c5527.38fec803.js  172c5527.49933410.js  172c5527.4eb22e7f.js  172c5527.f99ffa11.js  17896441.620c3a74.js  1dcd2c3c.089d053d.js  1dcd2c3c.a32d8e72.js  1dcd2c3c.fedde5b9.js  1f391b9e.0519f739.js  1f391b9e.64e1da68.js  1f391b9e.a7887986.js  1f391b9e.b9636d12.js  237.4cc48709.js  237.83a72e3a.js  237.9ea5b604.js  237.b0b49063.js  286b5b1b.36754508.js  286b5b1b.4841e578.js  286b5b1b.76bfa997.js  393be207.5c6d1a26.js  425efab3.12be7ee0.js  425efab3.2e07397c.js  425efab3.3c612a04.js  425efab3.c5e21061.js  5e95c892.79be63bc.js  5e95c892.9049b957.js  5e95c892.e3d65b58.js  6539b8c5.83dd82e6.js  6539b8c5.f6b09a70.js  682.cc11de68.js  72f3e208.17b390bb.js  72f3e208.705775a7.js  72f3e208.7c9a534f.js  72f3e208.b4a7d7ca.js  72f3e208.cf33d946.js  7c9391e8.065ab0c4.js  7c9391e8.44d9c1bb.js  (+36 more)
backend/: .env  agent.py  main.py  pyproject.toml  requirements.txt  retriveing.py  server.py
frontend/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
markdown-page/: index.html
(+194 files in other folders)
