[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "google-generativeai>=0.8.5",
    "openai>=2.9.0",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
